--- a/includes/shared-preamble-acronyms.tex
+++ b/includes/shared-preamble-acronyms.tex
@@ -35,7 +35,11 @@
 \newacronym{lut}{LUT}{lookup table}
 \newacronym{roi}{ROI}{region of interest}
 \newacronym{mri}{MRI}{magnetic resonance imaging}
-
+\newacronym{svm}{SVM}{support vector machine}
+\newacronym{fcn}{FCN}{fully convolutional network}
+\newacronym{cnn}{CNN}{convolutional neural network}
+\newacronym{dcnn}{DCNN}{deep convolutional neural network}
+\newacronym{ai}{AI}{artificial intelligence}
 
 % glossaries
 % usage:
