--- a/includes/thesis/part01-page6-listofacronyms.tex
+++ b/includes/thesis/part01-page6-listofacronyms.tex
@@ -2,12 +2,12 @@
 
 % see list of possible styles: https://www.dickimaw-books.com/gallery/glossaries-styles
 \printglossary[
-%type=\acronymtype,     % print only acronyms
-title=List of Abbreviations, % change title
-%nogroupskip=true,       % don't insert space between groups
-nonumberlist,           % don't show page numbers
-style=super             % use style preset
-%style=listgroup         % use style preset
+	%type=\acronymtype,     % print only acronyms
+	title=List of Abbreviations, % change title
+	nogroupskip=true,       % don't insert space between groups
+	nonumberlist,           % don't show page numbers
+	style=super             % use style preset
+	%style=listgroup         % use style preset
 ]
 
 \glsaddall              % print all entries regardless if used
