--- a/includes/thesis/part02-chapter03-methods.tex
+++ b/includes/thesis/part02-chapter03-methods.tex
@@ -2,6 +2,8 @@
 
 \chapter{Materials and Methods}\label{c:materialsNmethods}
 
+% why dice: https://sci-hub.ru/10.1007/s10462-020-09830-9
+
 % This chapter describes the setup of the case study.
 % The \cref{fig:casestudy-workflow} depicts the overall workflow of this thesis.
 % \begin{figure}[ht]
@@ -54,17 +56,17 @@ A summary of all scan parameters can be seen in \cref{tab:scan-parameters}.\\
 		\begin{tabular}{l l}
 			%\hline
 			% 			\textbf{Element} & \textbf{Description} \\ \hline
-			Manufacturer                  & Molecubes  \\
-			Model                         & X-Cube     \\
-			Tube voltage (\acrshort{kv})  & 50         \\
-			Tube current (\acrshort{mas}) & 70         \\
-			Exposure time (sec.)          & 42         \\
-			Reconstruction diameter (mm)  & 70         \\
-			Reconstruction algorithm      & \gls{isra} \\
-			Matrix size (\glspl{px})      & 700$\times$700    \\
-			Bit depth (\gls{bit})         & 16         \\
-			Slice thickness (mm)          & 0.1        \\
-			Pixel spacing (mm)            & 0.1        \\
+			Manufacturer                  & Molecubes      \\
+			Model                         & X-Cube         \\
+			Tube voltage (\acrshort{kv})  & 50             \\
+			Tube current (\acrshort{mas}) & 70             \\
+			Exposure time (sec.)          & 42             \\
+			Reconstruction diameter (mm)  & 70             \\
+			Reconstruction algorithm      & \gls{isra}     \\
+			Matrix size (\glspl{px})      & 700$\times$700 \\
+			Bit depth (\gls{bit})         & 16             \\
+			Slice thickness (mm)          & 0.1            \\
+			Pixel spacing (mm)            & 0.1            \\
 			%\hline
 		\end{tabular}
 		\caption{Dataset scan parameters}\label{tab:scan-parameters}
