--- a/includes/thesis/part03-page1-appendix.tex
+++ b/includes/thesis/part03-page1-appendix.tex
@@ -2,8 +2,10 @@
 \appendix
 
 \chapter{Appendix A: Segmentation guide}\label{a:guide}
+% TODO: reinclude appendix, deactivated now for speed
+%\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
 
-\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
+
 
 % \chapter{Appendix B: Sentiment Analysis Python Script}
 % %\lstinputlisting[language=Python, firstline=37, lastline=45]{source_filename.py}
